<resources>
    <string name="app_name">VacationStation</string>
    <string name="title_home">Home</string>
    <string name="title_overview">Overview</string>
    <string name="title_add">Add</string>
    <string name="title_map">Map</string>
    <string name="title_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="title_add_ut">Add new Item</string>
    <string name="add_name">Name</string>
    <string name="add_tags">Tags (optional)</string>
    <string name="add_comment">Comment (optional)</string>
    <string name="add_button">Add</string>
    <string name="home_bspStadt">BeispielStadt</string>
    <string name="home_bspDesc">Beispielbeschreibung</string>
    <string name="add_loc">Location (optional (Format: 1.234 N, 2,345 E))</string>
    <string name="username">Username</string>
    <string name="password">Passwort</string>


</resources>